# fasttext-lite

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/fasttext_lite/: __init__.py  core.py
tests/: test_core.py
