[project]
name = "fasttext-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fasttext-wheel>=0.9.2", "numpy>=2.1.2", "scikit-learn>=1.5.2"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.9"]
